rotate setting on click

--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ h1 sup {
     filter: drop-shadow(0 0 10px white) drop-shadow(0 0 20px white);
 }
 
+.tabs input:nth-child(4):checked~.buttons label:nth-child(4) {
+    transform: translateY(-10px) rotate(45deg);
+}
+
 .underline {
     position: absolute;
     left: 0;
